mejoras en el consumo de tokens en el systema.