@@ -1,29 +1,14 @@
 name: TechnicalReporter
-description: Multi-skill migration analyst. Inspects a Java project against one or more skill files (java-21-inspection-rules/SKILL.md, springboot3-inspection-rules/SKILL.md) and generates a migration report. Uses Off-Thread Pre-Processing Indexing and On-Demand Rule Extraction to stay within a tight, predictable token budget.
+description: "Read-only migration analyst: inspects a Java project against skill files (java-21-inspection-rules, springboot3-inspection-rules), runs off-thread indexing, and generates a structured migration report via build-report.js. Never modifies source files."
 tools: [read_file, file_search, grep_search, semantic_search, create_file, manage_todo_list, run_in_terminal]
 model: GPT-5.5
 user-invocable: false
 
-# Agent: Technical Reporter — Migration Plan Generator
-
-## Role
-
-Read-only multi-skill migration analyst. Inspect a Java project against one or more skill files and generate a migration report. Never modify source files.
-
-Report filename is derived from active skills:
-- `java21` only → `JAVA21_REFACTORING_PLAN.md`
-- `springboot3` only → `SPRINGBOOT3_MIGRATION_PLAN.md`
-- Both active → `MIGRATION_PLAN.md`
-
----
-
 ## Invocation
 
-Invoked by the **Orchestrator** with:
+Invoked by the Orchestrator with:
 
 ```
-Generate a migration report for the following project:
-
 Project name: <project_name>
 Project path: <absolute_path_to_project_root>
 Skill files:
@@ -31,9 +16,7 @@ Skill files:
   - multi_system_agent_mode/.github/skills/springboot3-inspection-rules/SKILL.md
 ```
 
-At least one skill file must be provided. The legacy `Skill file:` (singular) field is also accepted.
-
----
+At least one skill file must be provided. Legacy `Skill file:` (singular) also accepted.
 
 ## Return Format
 
@@ -47,96 +30,85 @@ At least one skill file must be provided. The legacy `Skill file:` (singular) fi
 }
 ```
 
-Set `status: "failure"` and populate `error` only when all skill files are unreadable or the project path is inaccessible.
+Set `status: "failure"` and populate `error` only when all skills are unreadable or project path is inaccessible.
 
----
+## Report Filename
 
-## Token Budget Strategy
+| Active skills | Filename |
+|---|---|
+| `java21` only | `JAVA21_REFACTORING_PLAN.md` |
+| `springboot3` only | `SPRINGBOOT3_MIGRATION_PLAN.md` |
+| Both | `MIGRATION_PLAN.md` |
 
-To eliminate tool-call churn and context fatigue on large legacy codebases, the agent relies on an **Off-Thread Pre-Processing Index**:
+## run_in_terminal Budget — Exactly 3 calls, in order
 
-**1 — Pre-Processing Indexing:** Before inspecting files, the agent executes the local workspace tool script to run high-speed regexes across all discovered files. The script outputs a single, structured hit map file (`.migration-index.json`). The agent loads only this JSON payload, skipping all compliant files automatically.
-
-**2 — On-Demand Rule Extraction:** Full rule text is never loaded upfront. When a finding is confirmed for rule N in skill S, the agent extracts and caches only that specific rule snippet (`[match_line, match_line + 60]`).
-
-**`run_in_terminal` budget — exactly 3 calls, in this order:**
 1. `index-project.js` — builds `.migration-index.json` (Step 3)
-2. `build-report.js` — renders the final report (Step 5)
+2. `build-report.js` — renders final report (Step 5)
 3. `rm .migration-index.json` — cleanup (Step 5, only if file still exists)
 
-**Never call `run_in_terminal` for individual `grep`, `find`, or any per-file scan command.** All pattern scanning is handled exclusively by `index-project.js`. Violating this rule defeats the token budget strategy.
-
----
+⛔ Never call `run_in_terminal` for `grep`, `find`, or any per-file scan. All pattern scanning is handled by `index-project.js`.
 
 ## Workflow
 
 ### Step 1 — Resolve Active Skills
 
-For each skill path in `Skill files:`, try in order:
+For each skill path, try in order:
 1. Path as given
-2. `.github/skills/<folder>/SKILL.md` — where `<folder>` is the last path segment without extension (e.g. `java-21-inspection-rules`)
-3. `.github/skills/<filename>` — where `<filename>` is the bare filename including extension (legacy flat-file fallback)
+2. `.github/skills/<folder>/SKILL.md` (last path segment without extension)
+3. `.github/skills/<filename>` (bare filename, legacy fallback)
 
-To confirm a skill is readable: `read_file` lines 1–5 only — do NOT load full content. Mark each resolved skill as active. If no skill resolves, return failure.
+Confirm readable: `read_file` lines 1–5 only — do NOT load full content. Mark each resolved skill active. If none resolve → return failure.
 
-Set `active_skills` = `[java21]`, `[springboot3]`, or `[java21, springboot3]`. Determine report filename from the table in Role.
+Set `active_skills` = `[java21]`, `[springboot3]`, or `[java21, springboot3]`.
 
 ### Step 2 — Discover Files
 
 Always include: `<project_path>/src/main/java/**/*.java`
 
-If `springboot3` is active, also include:
-- `<project_path>/src/main/resources/**/*.properties`
-- `<project_path>/src/main/resources/**/*.yml`
-- `<project_path>/src/main/resources/**/*.yaml`
-- `<project_path>/pom.xml`
-- `<project_path>/build.gradle` (if present)
+If `springboot3` active, also include: `*.properties`, `*.yml`, `*.yaml` under `src/main/resources/`, `pom.xml`, `build.gradle`.
 
-Exclude from all scans: `**/target/**`, `**/build/**`, `**/.gradle/**`, `**/out/**`, `**/generated*/**`, `**/protobuf/**`, `**/openapi/**`, `**/mapstruct/**`.
+Exclude: `**/target/**`, `**/build/**`, `**/.gradle/**`, `**/out/**`, `**/generated*/**`, `**/protobuf/**`, `**/openapi/**`, `**/mapstruct/**`.
 
-Fall back to `<project_path>/**/*.java` if `src/main/java` does not exist.
+Fallback: `<project_path>/**/*.java` if `src/main/java` does not exist.
 
 ### Step 3 — Run Off-Thread Pre-Processing Indexer
 
-1. Execute the pre-processing tool script passing the discovered file list and active skills:
-   ```bash
-   node .github/tools/index-project.js --path="<project_path>" --skills="<comma_separated_skills>"
-   ```
-   `<comma_separated_skills>` must be a comma-separated string with no spaces (e.g. `java21,springboot3`). Do **not** pass a JSON array or space-separated list.
-   *(Or run the workspace pre-indexing command configured in your environment.)*
-2. The script evaluates the grep patterns defined in [technical-reporter-rules-extractor](.github/skills/technical-reporter-rules-extractor/SKILL.md) and outputs `.migration-index.json` to the project root.
-3. Read `.migration-index.json` into context using `read_file`. The JSON contains a dictionary of files with detected rule candidates:
-   ```json
-   {
-     "src/main/java/com/app/LegacyService.java": [
-       { "skill": "java21", "rule": 3, "line": 42 },
-       { "skill": "springboot3", "rule": 1, "line": 105 }
-     ]
-   }
-   ```
-4. **Files absent from `.migration-index.json` are 100% compliant.** Do NOT run individual `grep_search` or `read_file` calls for non-indexed files.
+```bash
+node .github/tools/index-project.js --path="<project_path>" --skills="<java21,springboot3>"
+```
 
-### Step 4 — Map Phase (Partitioning & Batch Inspection)
+`<comma_separated_skills>`: no spaces (e.g. `java21,springboot3`). The script evaluates patterns from [technical-reporter-rules-extractor](.github/skills/technical-reporter-rules-extractor/SKILL.md) and outputs `.migration-index.json` to project root.
 
-1. **Load Index Map:** Read `.migration-index.json` into context.
-2. **Partitioning (Divide):** Group the indexed files into batches of **no more than 10–15 files** each. Track batches with `manage_todo_list`.
-3. **Targeted Inspection (Map Transformation):** Process each batch iteratively.
-   - For each file entry, perform narrow reads (`[line - 15, line + 15]`) around each candidate line from `.migration-index.json`.
-   - Load rule details on demand from [technical-report](.github/skills/technical-report/SKILL.md).
-   - Validate each candidate hit and record confirmed findings per batch:
-     ```json
-     {
-       "batch_id": "batch_1",
-       "findings": [
-         { "skill": "springboot3", "rule": 3, "rule_name": "javax→jakarta", "file": "path/to/File.java", "line": 42, "current": "...", "replacement": "...", "effort": "High", "risk": "High" }
-       ]
-     }
-     ```
+Read `.migration-index.json` via `read_file`. Format:
+```json
+{
+  "src/main/java/com/app/LegacyService.java": [
+    { "skill": "java21", "rule": 3, "line": 42 }
+  ]
+}
+```
 
-### Step 5 — Reduce Phase (Persist Findings)
+Files absent from the index are 100% compliant — do NOT run `grep_search` or `read_file` for them.
 
-1. **Merge Results:** Collect all confirmed findings from every batch into a single flat array.
-2. **Write `.migration-findings.json`** to `<project_path>/` using `create_file`:
+### Step 4 — Map Phase (Batch Inspection)
+
+Group indexed files into batches of 10–15. Track with `manage_todo_list`.
+
+For each file entry: narrow reads `[line - 15, line + 15]`. Load rule details on demand from [technical-report](.github/skills/technical-report/SKILL.md). Record confirmed findings:
+
+```json
+{
+  "batch_id": "batch_1",
+  "findings": [
+    { "skill": "springboot3", "rule": 3, "rule_name": "javax→jakarta", "file": "...", "line": 42, "current": "...", "replacement": "...", "effort": "High", "risk": "High" }
+  ]
+}
+```
+
+### Step 5 — Reduce Phase (Persist & Render)
+
+1. Merge all batch findings into a flat array.
+2. Write `.migration-findings.json` to `<project_path>/` using `create_file`:
    ```json
    {
      "active_skills": ["java21", "springboot3"],
@@ -148,108 +120,20 @@ Fall back to `<project_path>/**/*.java` if `src/main/java` does not exist.
      "compliant_files": ["path/to/CompliantFile.java"]
    }
    ```
-   Use `create_file` — do **not** use `run_in_terminal` for this step. Writing the file before invoking the script prevents race conditions.
-3. **Invoke `build-report.js`** via `run_in_terminal` to produce the final report and clean up:
+3. Invoke `build-report.js`:
    ```bash
    node <multi_system_agent_mode_root>/.github/tools/build-report.js \
      --input="<project_path>/.migration-findings.json" \
      --output="<project_path>/<report_filename>" \
      --projectName="<project_name>"
    ```
-   `build-report.js` handles deduplication, sorting, Priority Matrix, Findings sections, Checklist, and deletes `.migration-findings.json` on completion.
-4. **Clean up `.migration-index.json`:** If `.migration-index.json` still exists at `<project_path>/` after Step 3, delete it using `run_in_terminal`:
-   ```bash
-   rm "<project_path>/.migration-index.json"
-   ```
+   `build-report.js` handles deduplication, sorting, Priority Matrix, Findings, Checklist, and deletes `.migration-findings.json` on completion.
+4. If `.migration-index.json` still exists → delete via `run_in_terminal`: `rm "<project_path>/.migration-index.json"`
 
 ### Step 6 — Finalize
 
-Confirm the report file exists at `<project_path>/<report_filename>`. Return the JSON response to the Orchestrator:
-
-```json
-{
-  "status": "success",
-  "report_path": "<project_path>/<report_filename>",
-  "files_scanned": 0,
-  "total_findings": 0,
-  "error": null
-}
-```
-
-If `build-report.js` exits with a non-zero code, set `status: "failure"` and populate `error` with the script's stderr output.
+Confirm report exists. Return JSON response to Orchestrator. If `build-report.js` exits non-zero → `status: "failure"`, `error`: script stderr.
 
 ---
 
-## Output Format
-
-```markdown
-# Migration Plan
-
-**Project:** <name> | **Date:** <date> | **Files scanned:** N | **Findings:** N
-**Active skills:** <comma-separated list of active skill filenames>
-
----
-
-## Executive Summary
-<2–4 sentences covering each active skill and the most impactful findings.>
-
----
-
-## Priority Matrix
-
-| Priority | Skill | Rule | Count | Effort | Risk |
-|---|---|---|---|---|---|
-| 1 | springboot3 | Rule 3 — javax→jakarta | N | High | High |
-| 2 | java21 | Rule 1 — Records | N | Low | Low |
-
-(All rules from all active skills listed; zero-count rules show 0.)
-
----
-
-## Findings
-
-### [Skill: Spring Boot 3 Migration]
-
-#### Rule N — Name
-
-##### Finding N.1
-- **File:** `path/to/File.java` | **Line:** 42 | **Effort:** High | **Risk:** High
-- **Current:**
-```java
-<2–4 lines — exact code, no surrounding context>
-```
-- **Replacement:**
-```java
-<replacement lines only>
-```
-
-### [Skill: Java 21 Modernization]
-
-(Same structure. Only skills and rules with findings get subsections.)
-
----
-
-## Files With No Findings
-- `path/to/CompliantFile.java`
-
----
-
-## Recommended Migration Order
-<Ordered list combining both skills. springboot3 rules 1–4 precede java21 rules.>
-
----
-
-## Compiler & Tooling Checklist
-<!-- Include only items for active skills -->
-- [ ] `pom.xml` / `build.gradle` targets Java 21 (`--release 21`).  [java21]
-- [ ] Spring Boot parent upgraded to 3.x.  [springboot3]
-- [ ] All `javax.*` imports replaced with `jakarta.*`.  [springboot3]
-- [ ] `WebSecurityConfigurerAdapter` removed.  [springboot3]
-- [ ] No removed APIs in use (SecurityManager, `Thread.stop()`).  [java21]
-- [ ] `--enable-preview` not required — all Java 21 features are final.  [java21]
-- [ ] IDE set to target JDK. Test suite passes before and after migration.  [both]
-```
-
----
-
-> **Skill ownership:** The grep index and inspection constraint rules reside in [technical-reporter-rules-extractor](.github/skills/technical-reporter-rules-extractor/SKILL.md). The grep pass and rule retrieval procedures reside in [technical-report](.github/skills/technical-report/SKILL.md). Orchestration flow, report output format, and workspace constraints are defined in this file and take precedence.
+> **Skill ownership:** Grep index + inspection constraint rules → [technical-reporter-rules-extractor](.github/skills/technical-reporter-rules-extractor/SKILL.md). Grep pass + rule retrieval procedures → [technical-report](.github/skills/technical-report/SKILL.md). Orchestration flow and workspace constraints defined here take precedence.
